--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@babel/core": "^7.23.9",
     "@babel/preset-env": "^7.23.9",
     "@babel/preset-react": "^7.23.3",
+    "@chatscope/chat-ui-kit-react": "^1.10.1",
     "axios": "^1.6.7",
     "babel-loader": "^9.1.3",
     "bootstrap": "^5.3.3",
+    "css-loader": "^6.10.0",
     "immer": "^10.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
@@ -23,6 +25,7 @@
     "react-router-dom": "^6.22.0",
     "react-tooltip": "^5.26.3",
     "react-transition-group": "^4.4.5",
+    "style-loader": "^3.3.4",
     "use-immer": "^0.9.0",
     "webpack": "^5.90.1",
     "webpack-cli": "^5.1.4",
